src/scss/components/_section.scss
.section {
  padding: 5rem 0 2rem;

  @include media($screen-sm) {
    padding: 14rem 0 4rem;
  }

  &.is-active {

    .section__column {
      opacity: 1;
    }
  }

  .section__column {
    opacity: 0;
    transition: opacity 500ms;
  }
}

.section--intro {
  margin-top: 0;

  .section__media {
    display: none;

    @include media($screen-sm) {
      display: block;
    }
  }
}

.section--left {

}

.section--center {

  .section__column {
    width: 100%;

    @include media($screen-sm) {
      text-align: center;
    }
  }

  .section__container {
    align-items: center;
    flex-direction: column;
  }
}

.section--right {

}

.section--contact {
  overflow: hidden;
  width: 100%;
  padding-bottom: 0;

  h1 {
    text-align: center;
  }

  .section__container {
    flex-direction: column;
  }
}

.section__container {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  max-width: $container-max-width;
  margin: 0 auto;
  padding: 0 2rem;

  @include media($screen-sm) {
    flex-wrap: nowrap;
    padding: 0 3rem;
  }
}

.section__container--wide {
  max-width: 135rem;
}

.section__column {
    width: 100%;

    @include media($screen-sm) {
      width: 50%;
    }
  }

.section__text {

}

.section__media {

  img,
  svg {
    width: 100%;
  }
}

.section__description {
  margin: 0;
  font-size: 1.6rem;
  line-height: 1.5;

  @include media($screen-sm) {
    font-size: 2rem;
  }
}

.section__note {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  margin: 2rem 0 0;
  color: $cl-primary;
  font-size: 2rem;
  text-align: right;

  @include media($screen-sm) {
    display: none;
  }

  &:after {
    content: '';
    display: inline-block;
    width: 4rem;
    height: 4rem;
    margin-left: 1rem;
    background-size: 100%;
    background-image: url("images/icon-swipe.svg");
  }
}

